--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <main>
         <section id="dashboard"> 
             <div id="result">
-                <h1>Seu Resultado</h1>
-                <div id="bola">
-                    <h2>76</h2>
-                    <h3>de 100</h3>
+                <div id="teste">
+                    <h1>Seu Resultado</h1>
+                    <div id="bola">
+                        <h2>76</h2>
+                        <h3>de 100</h3>
+                    </div>
+                    <h4>Ótimo</h4>
+                    <p>Você pontuou 65% a mais do que o total de pessoas que fizeram esse teste</p>
                 </div>
-                <h4>Ótimo</h4>
-                <p>Você pontuou 65% a mais do que o total de pessoas que fizeram esse teste</p>
             </div>
             <div id="resume">
                 <h1>Resumo</h1>
@@ -47,7 +49,6 @@
                     <a href="#">Continue</a>
                 </container>
             </div>
-
         </section>
     </main>
 </body>
